--- a/tools/reveral_seqs_practice.ipynb
+++ b/tools/reveral_seqs_practice.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "exp_type = \"reverse_points\"\n",
-    "num_conditions = 10  # number of different file sequences to generate (change if needed)\n",
+    "num_conditions = 1  # number of different file sequences to generate (change if needed)\n",
     "reps_dict = {\n",
-    "    \"reverse_points\": 12,\n",
+    "    \"reverse_points\": 5,\n",
     "}  # number of repetitions after the first presentation\n",
     "num_reps = reps_dict[\n",
     "    exp_type\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,14 +114,8 @@
     "        # trial_types: array  where each element represent the sequence\n",
     "        # of trial types (1 = Points/Standard, 0 = Goals/Reverse) a participant will experience\n",
     "        self.block_structure = [\n",
-    "            (2, 0),\n",
     "            (2, 1),\n",
-    "            (6, 0),\n",
-    "            (6, 1),\n",
     "            (2, 0),\n",
-    "            (2, 1),\n",
-    "            (6, 0),\n",
-    "            (6, 1),\n",
     "        ]\n",
     "        self.num_blocks = len(self.block_structure)\n",
     "\n",
@@ -156,12 +150,6 @@
     "        for s_i in trange(self.num_conditions):\n",
     "            # blocks: array of length n with each element representing the block's set size and trial type\n",
     "            blocks = self.block_structure.copy()\n",
-    "            # Randomize the first half of the blocks\n",
-    "            for i in range(0, self.num_blocks // 2, 4):\n",
-    "                # has to do a array copy because of the pointer to set object\n",
-    "                arr = blocks[i : i + 4]\n",
-    "                np.random.shuffle(arr)\n",
-    "                blocks[i : i + 4] = arr\n",
     "\n",
     "            # ================ RULES =============================================================================\n",
     "            # block_rules: a list where each element is a dictionary, with keys representing a stimulus image and\n",
@@ -273,7 +261,7 @@
     "\n",
     "            # save output\n",
     "            np.savetxt(\n",
-    "                f\"{self.to_dir}seq{s_i+1}_learning.csv\", train_seq, delimiter=\",\"\n",
+    "                f\"{self.to_dir}seq1_practice.csv\", train_seq, delimiter=\",\"\n",
     "            )\n",
     "\n",
     "        return train_seq"
@@ -288,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +285,7 @@
        "'reverse_points'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,30 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 378.17it/s]"
+      "100%|██████████| 1/1 [00:00<00:00, 250.83it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 1, 1: 2}, {0: 0, 1: 1}, {0: 0, 1: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}]\n",
-      "[{0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 2}, {0: 0, 1: 2}, {0: 0, 1: 1}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}]\n",
-      "[{0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 1, 1: 2}, {0: 0, 1: 1}, {0: 0, 1: 1}, {0: 0, 1: 1}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}]\n",
-      "[{0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 1, 1: 2}, {0: 0, 1: 1}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 1, 1: 2}, {0: 0, 1: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}]\n",
-      "[{0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 2}, {0: 0, 1: 1}, {0: 0, 1: 1}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}]\n",
-      "[{0: 0, 1: 2}, {0: 0, 1: 1}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 1, 1: 2}, {0: 1, 1: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}]\n",
-      "[{0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 1, 1: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 2}, {0: 1, 1: 2}, {0: 0, 1: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 1, 4: 2, 5: 2}]\n",
-      "[{0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 1, 1: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1}, {0: 0, 1: 1}, {0: 0, 1: 1}, {0: 0, 1: 0, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}]\n",
-      "[{0: 0, 1: 2}, {0: 0, 1: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 0, 1: 1}, {0: 0, 1: 1}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 2, 5: 2}]\n",
-      "[{0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}, {0: 0, 1: 1}, {0: 0, 1: 1}, {0: 0, 1: 0, 2: 1, 3: 1, 4: 2, 5: 2}, {0: 1, 1: 2}, {0: 0, 1: 1}, {0: 0, 1: 0, 2: 0, 3: 1, 4: 1, 5: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2, 5: 2}]\n"
+      "[{0: 0, 1: 1}, {0: 0, 1: 1}]\n"
      ]
     },
     {
@@ -344,16 +323,23 @@
     {
      "data": {
       "text/plain": [
-       "array([[2., 4., 3., ..., 6., 1., 3.],\n",
-       "       [1., 2., 1., ..., 2., 0., 1.],\n",
-       "       [6., 6., 6., ..., 6., 6., 6.],\n",
-       "       ...,\n",
-       "       [1., 1., 1., ..., 4., 4., 4.],\n",
-       "       [6., 4., 1., ..., 4., 2., 1.],\n",
-       "       [1., 1., 1., ..., 1., 1., 1.]])"
+       "array([[1., 2., 1., 2., 2., 1., 1., 2., 2., 1., 2., 1., 2., 1., 2., 1.,\n",
+       "        2., 1., 2., 1., 2., 1., 1., 2.],\n",
+       "       [0., 1., 0., 1., 1., 0., 0., 1., 1., 0., 1., 0., 1., 0., 1., 0.,\n",
+       "        1., 0., 1., 0., 1., 0., 0., 1.],\n",
+       "       [2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
+       "        2., 2., 2., 2., 2., 2., 2., 2.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 2., 2., 2.,\n",
+       "        2., 2., 2., 2., 2., 2., 2., 2.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 2., 2., 2.,\n",
+       "        2., 2., 2., 2., 2., 2., 2., 2.],\n",
+       "       [5., 3., 5., 3., 3., 5., 5., 3., 3., 5., 3., 5., 1., 6., 1., 6.,\n",
+       "        1., 6., 1., 6., 1., 6., 6., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +349,7 @@
     "seqmkr = pseudoRWMSequenceMaker(\n",
     "    exp_type=exp_type,\n",
     "    num_reps=num_reps,\n",
-    "    num_conditions=10,\n",
+    "    num_conditions=1,\n",
     "    exact_reps=exact_reps,\n",
     "    max_consec_goal_reps=16,\n",
     ")\n",
@@ -631,43 +617,6 @@
     "df.groupby([\"block\", \"stim\"]).img_folder.apply(\n",
     "    lambda x: np.sort(np.unique(x, return_counts=True)[1])\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Extract sequences for self-determined goals task"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in np.arange(1, 11):\n",
-    "    df = pd.read_csv(\n",
-    "        f\"../reverse-points/v1/seq{i}_learning.csv\", header=None,\n",
-    "    ).T\n",
-    "\n",
-    "    colnames = [\n",
-    "        \"stim\",\n",
-    "        \"correct_key\",\n",
-    "        \"set_size\",\n",
-    "        \"block\",\n",
-    "        \"img_folder\",\n",
-    "        \"stim_img\",\n",
-    "        \"trial_type\",\n",
-    "        # \"goal_img\",\n",
-    "        # \"nongoal_img\",\n",
-    "    ]\n",
-    "    df.columns = colnames\n",
-    "    df = df[(df.set_size == 2) & (df.trial_type == 0)]\n",
-    "    for idx, block_i in enumerate(df.block.unique()):\n",
-    "        df.loc[df.block == block_i, 'block'] = idx + 1\n",
-    "    \n",
-    "    df.to_csv(f\"../self-determined/seq{i}_learning.csv\", index=False)"
    ]
   }
  ],
