--- a/tools/reveral_seqs.ipynb
+++ b/tools/reveral_seqs.ipynb
@@ -642,9 +642,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2. 1.] [5. 3.]\n",
+      "[1. 2.] [5. 3.]\n",
+      "[1. 2.] [1. 8.]\n",
+      "[1. 2.] [1. 8.]\n",
+      "[1. 2.] [7. 1.]\n",
+      "[1. 2.] [7. 1.]\n",
+      "[2. 1.] [3. 7.]\n",
+      "[1. 2.] [3. 7.]\n",
+      "[2. 1.] [5. 8.]\n",
+      "[1. 2.] [5. 8.]\n",
+      "[2. 1.] [2. 6.]\n",
+      "[1. 2.] [2. 6.]\n",
+      "[2. 1.] [5. 4.]\n",
+      "[2. 1.] [5. 4.]\n",
+      "[1. 2.] [8. 5.]\n",
+      "[1. 2.] [8. 5.]\n",
+      "[1. 2.] [2. 5.]\n",
+      "[2. 1.] [2. 5.]\n",
+      "[2. 1.] [5. 2.]\n",
+      "[1. 2.] [5. 2.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/6y/khb9drcn0p373bwf72szrzvm0000gn/T/ipykernel_61502/446502780.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n",
+      "/var/folders/6y/khb9drcn0p373bwf72szrzvm0000gn/T/ipykernel_61502/446502780.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n",
+      "/var/folders/6y/khb9drcn0p373bwf72szrzvm0000gn/T/ipykernel_61502/446502780.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n",
+      "/var/folders/6y/khb9drcn0p373bwf72szrzvm0000gn/T/ipykernel_61502/446502780.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n",
+      "/var/folders/6y/khb9drcn0p373bwf72szrzvm0000gn/T/ipykernel_61502/446502780.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n",
+      "/var/folders/6y/khb9drcn0p373bwf72szrzvm0000gn/T/ipykernel_61502/446502780.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n",
+      "/var/folders/6y/khb9drcn0p373bwf72szrzvm0000gn/T/ipykernel_61502/446502780.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n",
+      "/var/folders/6y/khb9drcn0p373bwf72szrzvm0000gn/T/ipykernel_61502/446502780.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n",
+      "/var/folders/6y/khb9drcn0p373bwf72szrzvm0000gn/T/ipykernel_61502/446502780.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n",
+      "/var/folders/6y/khb9drcn0p373bwf72szrzvm0000gn/T/ipykernel_61502/446502780.py:24: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n"
+     ]
+    }
+   ],
    "source": [
     "for i in np.arange(1, 11):\n",
     "    df = pd.read_csv(\n",
@@ -666,8 +759,13 @@
     "    df = df[(df.set_size == 2) & (df.trial_type == 0)]\n",
     "    for idx, block_i in enumerate(df.block.unique()):\n",
     "        df.loc[df.block == block_i, 'block'] = idx + 1\n",
-    "    \n",
-    "    df.to_csv(f\"../self-determined/seq{i}_learning.csv\", index=False)"
+    "        block_df = df[df.block == idx+1]\n",
+    "        \n",
+    "        stim_img_map = {old: new for old, new in zip(sorted(block_df.stim_img.unique()), [1, 2])}\n",
+    "        block_df['stim_img'] = block_df['stim_img'].map(stim_img_map)\n",
+    "        df.loc[df.block == idx+1, 'stim_img'] = block_df['stim_img']\n",
+    "\n",
+    "    df.to_csv(f\"../self-determined/seq{i}_learning.csv\", index=False)\n"
    ]
   }
  ],
