--- a/tools/reveral_seqs.ipynb
+++ b/tools/reveral_seqs.ipynb
@@ -771,7 +771,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dl4rl",
    "language": "python",
    "name": "python3"
   },
