--- a/tools/reveral_seqs_practice.ipynb
+++ b/tools/reveral_seqs_practice.ipynb
@@ -622,7 +622,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dl4rl",
    "language": "python",
    "name": "python3"
   },
