--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "83e9ea29",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 113,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -312,62 +312,62 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -375,19 +375,19 @@
       ],
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     3            3      0           2        2           1         3   \n",
-       "1     1            2      0           2        0           1         3   \n",
-       "2     1            0      0           2        2           3         0   \n",
-       "3     3            1      0           2        3           0         1   \n",
+       "0     3            2      1           2        2           3         0   \n",
+       "1     0            1      1           2        3           2         1   \n",
+       "2     2            3      1           2        2           0         3   \n",
+       "3     0            1      1           2        1           3         2   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          0        1           2         3          0  \n",
-       "1          2        1           2         3          0  \n",
-       "2          1        1           2         3          0  \n",
-       "3          2        1           2         3          0  "
+       "0          1        3           2         0          1  \n",
+       "1          0        3           2         0          1  \n",
+       "2          1        3           2         0          1  \n",
+       "3          0        3           2         0          1  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,6 +419,7 @@
     "for img_folder in range(2):\n",
     "    all_blocks = generate_shaping_experiment(NUM_DIRECTIONS, NUM_FOOD, NUM_ITER_PER_STIM, 2)\n",
     "    all_blocks[\"img_folder\"] = img_folder+1\n",
+    "    all_blocks[\"block\"] = all_blocks[\"block\"] + 1\n",
     "    all_blocks = all_blocks[OUTPUT_COL_ORDER]\n",
     "    all_blocks.to_csv(f\"{seq_folder}/shaping{img_folder+1}_learning.csv\", index=False)\n",
     "\n",
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 114,
    "id": "5b6c0ee7",
    "metadata": {},
    "outputs": [
@@ -443,8 +444,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'top': 3, 'bottom': 1, 'left': 0, 'right': 2} {0: 3, 1: 0, 2: 2, 3: 1}\n",
-      "{'top': 3, 'bottom': 1, 'left': 0, 'right': 2} {0: 3, 1: 1, 2: 2, 3: 0}\n"
+      "{'top': 3, 'bottom': 1, 'left': 0, 'right': 2} {0: 2, 1: 1, 2: 3, 3: 0}\n",
+      "{'top': 1, 'bottom': 0, 'left': 3, 'right': 2} {0: 3, 1: 1, 2: 2, 3: 0}\n"
      ]
     },
     {
@@ -486,61 +487,61 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -549,19 +550,19 @@
       ],
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     2            0      0           2        0           3         2   \n",
-       "1     1            3      0           2        1           0         2   \n",
-       "2     0            1      0           2        1           3         0   \n",
-       "3     3            2      0           2        3           1         2   \n",
+       "0     2            3      1           2        0           3         2   \n",
+       "1     1            2      1           2        0           3         2   \n",
+       "2     3            1      1           2        0           1         2   \n",
+       "3     1            3      1           2        3           0         1   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          1        3           1         0          2  \n",
-       "1          3        3           1         0          2  \n",
-       "2          2        3           1         0          2  \n",
-       "3          0        3           1         0          2  "
+       "0          1        1           0         3          2  \n",
+       "1          1        1           0         3          2  \n",
+       "2          3        1           0         3          2  \n",
+       "3          2        1           0         3          2  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,6 +589,7 @@
     "for img_folder in range(2):\n",
     "    all_blocks = generate_nonshaping_experiment(NUM_DIRECTIONS, NUM_FOOD, NUM_ITER_PER_STIM, NUM_BLOCKS)\n",
     "    all_blocks[\"img_folder\"] = img_folder+1\n",
+    "    all_blocks[\"block\"] = all_blocks[\"block\"] + 1\n",
     "    all_blocks = all_blocks[OUTPUT_COL_ORDER]\n",
     "    all_blocks.to_csv(f\"{seq_folder}/nonshaping{img_folder+1}_learning.csv\", index=False)\n",
     "\n",
