--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 117,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -311,63 +311,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -375,28 +375,28 @@
       ],
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     3            2      1           2        2           3         0   \n",
-       "1     0            1      1           2        3           2         1   \n",
-       "2     2            3      1           2        2           0         3   \n",
-       "3     0            1      1           2        1           3         2   \n",
+       "0     0            0      1           1        0           2         1   \n",
+       "1     3            1      1           1        0           2         3   \n",
+       "2     1            0      1           1        1           0         3   \n",
+       "3     2            2      1           1        3           1         0   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          1        3           2         0          1  \n",
-       "1          0        3           2         0          1  \n",
-       "2          1        3           2         0          1  \n",
-       "3          0        3           2         0          1  "
+       "0          3        0           3         1          2  \n",
+       "1          1        0           3         1          2  \n",
+       "2          2        0           3         1          2  \n",
+       "3          2        0           3         1          2  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def generate_shaping_experiment(num_directions, num_food, num_iter_per_stim, num_rounds):\n",
-    "    correct_key_mapping, stim_food_mapping = generate_key_food_mapping(num_directions, num_food)\n",
+    "def generate_shaping_experiment(num_directions, num_food, num_iter_per_stim, num_image_sets):\n",
     "    all_blocks = []\n",
-    "    for round in range(num_rounds):\n",
+    "    for img_set in range(num_image_sets):\n",
+    "        correct_key_mapping, stim_food_mapping = generate_key_food_mapping(num_directions, num_food)\n",
     "        shaping_block = pd.DataFrame(\n",
     "            generate_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping)\n",
     "        )\n",
@@ -405,8 +405,10 @@
     "                num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping\n",
     "            )\n",
     "        )\n",
-    "        shaping_block[\"block\"] = round * 2\n",
-    "        nonshaping_block[\"block\"] = round * 2 + 1\n",
+    "        shaping_block[\"block\"] = img_set * 2\n",
+    "        shaping_block[\"img_folder\"] = img_set + 1\n",
+    "        nonshaping_block[\"block\"] = img_set * 2 + 1\n",
+    "        nonshaping_block[\"img_folder\"] = img_set + 1\n",
     "        all_blocks.append(shaping_block)\n",
     "        all_blocks.append(nonshaping_block)\n",
     "\n",
@@ -416,13 +418,11 @@
     "NUM_FOOD = 4\n",
     "NUM_ITER_PER_STIM = 13\n",
     "\n",
-    "for img_folder in range(2):\n",
-    "    all_blocks = generate_shaping_experiment(NUM_DIRECTIONS, NUM_FOOD, NUM_ITER_PER_STIM, 2)\n",
-    "    all_blocks[\"img_folder\"] = img_folder+1\n",
-    "    all_blocks[\"block\"] = all_blocks[\"block\"] + 1\n",
-    "    all_blocks = all_blocks[OUTPUT_COL_ORDER]\n",
-    "    all_blocks.to_csv(f\"{seq_folder}/shaping{img_folder+1}_learning.csv\", index=False)\n",
+    "all_blocks = generate_shaping_experiment(NUM_DIRECTIONS, NUM_FOOD, NUM_ITER_PER_STIM, 2)\n",
+    "all_blocks[\"block\"] = all_blocks[\"block\"] + 1\n",
+    "all_blocks = all_blocks[OUTPUT_COL_ORDER]\n",
     "\n",
+    "all_blocks.to_csv(f\"{seq_folder}/shaping1_learning.csv\", index=False)\n",
     "all_blocks.head(4)"
    ]
   },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "5b6c0ee7",
    "metadata": {},
    "outputs": [
@@ -568,30 +568,29 @@
     }
    ],
    "source": [
-    "def generate_nonshaping_experiment(num_directions, num_food, num_iter_per_stim, num_blocks):\n",
-    "    correct_key_mapping, stim_food_mapping = generate_key_food_mapping(num_directions, num_food)\n",
-    "    print(correct_key_mapping, stim_food_mapping)\n",
-    "    \n",
+    "def generate_nonshaping_experiment(num_directions, num_food, num_iter_per_stim, num_image_sets):\n",
     "    all_blocks = []\n",
-    "    for b in range(num_blocks):\n",
-    "        nonshaping_block = pd.DataFrame(\n",
-    "            generate_non_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping)\n",
-    "        )\n",
-    "        nonshaping_block[\"block\"] = b\n",
-    "        all_blocks.append(nonshaping_block)\n",
+    "    for img_set in range(num_image_sets):\n",
+    "        correct_key_mapping, stim_food_mapping = generate_key_food_mapping(num_directions, num_food)\n",
+    "        for b in range(2):\n",
+    "            nonshaping_block = pd.DataFrame(\n",
+    "                generate_non_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping)\n",
+    "            )\n",
+    "            nonshaping_block[\"block\"] = img_set * 2 + b\n",
+    "            nonshaping_block[\"img_folder\"] = img_set + 1\n",
+    "            all_blocks.append(nonshaping_block)\n",
     "\n",
     "    return pd.concat(all_blocks)\n",
     "\n",
     "NUM_DIRECTIONS = 4\n",
     "NUM_FOOD = 4\n",
     "NUM_ITER_PER_STIM = 13\n",
-    "NUM_BLOCKS = 4\n",
-    "for img_folder in range(2):\n",
-    "    all_blocks = generate_nonshaping_experiment(NUM_DIRECTIONS, NUM_FOOD, NUM_ITER_PER_STIM, NUM_BLOCKS)\n",
-    "    all_blocks[\"img_folder\"] = img_folder+1\n",
-    "    all_blocks[\"block\"] = all_blocks[\"block\"] + 1\n",
-    "    all_blocks = all_blocks[OUTPUT_COL_ORDER]\n",
-    "    all_blocks.to_csv(f\"{seq_folder}/nonshaping{img_folder+1}_learning.csv\", index=False)\n",
+    "\n",
+    "all_blocks = generate_nonshaping_experiment(NUM_DIRECTIONS, NUM_FOOD, NUM_ITER_PER_STIM, 2)\n",
+    "all_blocks[\"block\"] = all_blocks[\"block\"] + 1\n",
+    "all_blocks = all_blocks[OUTPUT_COL_ORDER]\n",
+    "\n",
+    "all_blocks.to_csv(f\"{seq_folder}/nonshaping1_learning.csv\", index=False)\n",
     "\n",
     "all_blocks.head(4)"
    ]
