generate consistent mapping between conditions

--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -312,36 +312,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -350,23 +350,23 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -375,41 +375,47 @@
       ],
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     0            0      1           1        0           2         1   \n",
-       "1     3            1      1           1        0           2         3   \n",
-       "2     1            0      1           1        1           0         3   \n",
-       "3     2            2      1           1        3           1         0   \n",
+       "0     0            2      1           1        0           3         2   \n",
+       "1     1            3      1           1        3           1         0   \n",
+       "2     0            0      1           1        1           0         3   \n",
+       "3     1            1      1           1        3           0         2   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          3        0           3         1          2  \n",
-       "1          1        0           3         1          2  \n",
-       "2          2        0           3         1          2  \n",
-       "3          2        0           3         1          2  "
+       "0          1        0           1         3          2  \n",
+       "1          2        0           1         3          2  \n",
+       "2          2        0           1         3          2  \n",
+       "3          1        0           1         3          2  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def generate_shaping_experiment(num_directions, num_food, num_iter_per_stim, num_image_sets):\n",
+    "def generate_shaping_round(num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping, img_set):\n",
+    "    shaping_block = pd.DataFrame(\n",
+    "        generate_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping)\n",
+    "    )\n",
+    "    nonshaping_block = pd.DataFrame(\n",
+    "        generate_non_shaping_block(\n",
+    "            num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping\n",
+    "        )\n",
+    "    )\n",
+    "    shaping_block[\"block\"] = img_set * 2\n",
+    "    shaping_block[\"img_folder\"] = img_set + 1\n",
+    "    nonshaping_block[\"block\"] = img_set * 2 + 1\n",
+    "    nonshaping_block[\"img_folder\"] = img_set + 1\n",
+    "    return pd.concat([shaping_block, nonshaping_block])\n",
+    "\n",
+    "def generate_nonshaping_round(num_directions, num_iter_per_stim,  correct_key_mapping, stim_food_mapping, img_set):\n",
     "    all_blocks = []\n",
-    "    for img_set in range(num_image_sets):\n",
-    "        correct_key_mapping, stim_food_mapping = generate_key_food_mapping(num_directions, num_food)\n",
-    "        shaping_block = pd.DataFrame(\n",
-    "            generate_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping)\n",
-    "        )\n",
+    "    for b in range(2):\n",
     "        nonshaping_block = pd.DataFrame(\n",
-    "            generate_non_shaping_block(\n",
-    "                num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping\n",
-    "            )\n",
+    "            generate_non_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping)\n",
     "        )\n",
-    "        shaping_block[\"block\"] = img_set * 2\n",
-    "        shaping_block[\"img_folder\"] = img_set + 1\n",
-    "        nonshaping_block[\"block\"] = img_set * 2 + 1\n",
+    "        nonshaping_block[\"block\"] = img_set * 2 + b\n",
     "        nonshaping_block[\"img_folder\"] = img_set + 1\n",
-    "        all_blocks.append(shaping_block)\n",
     "        all_blocks.append(nonshaping_block)\n",
     "\n",
     "    return pd.concat(all_blocks)\n",
@@ -417,27 +423,27 @@
     "NUM_DIRECTIONS = 4\n",
     "NUM_FOOD = 4\n",
     "NUM_ITER_PER_STIM = 13\n",
+    "shaping_blocks = []\n",
+    "nonshaping_blocks = []\n",
+    "for img_set in range(2):\n",
+    "    correct_key_mapping, stim_food_mapping = generate_key_food_mapping(NUM_DIRECTIONS, NUM_FOOD)\n",
+    "    shaping_blocks.append(generate_shaping_round(NUM_DIRECTIONS, NUM_ITER_PER_STIM, correct_key_mapping, stim_food_mapping, img_set))\n",
+    "    nonshaping_blocks.append(generate_nonshaping_round(NUM_DIRECTIONS, NUM_ITER_PER_STIM, correct_key_mapping, stim_food_mapping, img_set))\n",
     "\n",
-    "all_blocks = generate_shaping_experiment(NUM_DIRECTIONS, NUM_FOOD, NUM_ITER_PER_STIM, 2)\n",
-    "all_blocks[\"block\"] = all_blocks[\"block\"] + 1\n",
-    "all_blocks = all_blocks[OUTPUT_COL_ORDER]\n",
     "\n",
-    "all_blocks.to_csv(f\"{seq_folder}/shaping2_learning.csv\", index=False)\n",
-    "all_blocks.head(4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dfec6adb",
-   "metadata": {},
-   "source": [
-    "# Non shaping"
+    "for name, data in zip([\"shaping\", \"nonshaping\"], [shaping_blocks, nonshaping_blocks]):\n",
+    "    concated_data = pd.concat(data)\n",
+    "    concated_data[\"block\"] = concated_data[\"block\"] + 1\n",
+    "    concated_data = concated_data[OUTPUT_COL_ORDER]\n",
+    "    concated_data.to_csv(f\"{seq_folder}/{name}2_learning.csv\", index=False)\n",
+    "\n",
+    "concated_data.head(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b6c0ee7",
+   "execution_count": 130,
+   "id": "2952d60f",
    "metadata": {},
    "outputs": [
     {
@@ -477,114 +483,90 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>48</th>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <th>49</th>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <th>50</th>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>51</th>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     1            0      1           1        3           0         1   \n",
-       "1     2            2      1           1        1           3         0   \n",
-       "2     1            3      1           1        0           3         1   \n",
-       "3     3            0      1           1        2           3         1   \n",
+       "    stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
+       "48     2            1      4           2        0           3         2   \n",
+       "49     1            0      4           2        3           1         2   \n",
+       "50     2            3      4           2        0           2         3   \n",
+       "51     3            2      4           2        2           3         0   \n",
        "\n",
-       "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          2        3           0         1          2  \n",
-       "1          2        3           0         1          2  \n",
-       "2          2        3           0         1          2  \n",
-       "3          0        3           0         1          2  "
+       "    right_img  top_key  bottom_key  left_key  right_key  \n",
+       "48          1        2           1         3          0  \n",
+       "49          0        2           1         3          0  \n",
+       "50          1        2           1         3          0  \n",
+       "51          1        2           1         3          0  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def generate_nonshaping_experiment(num_directions, num_food, num_iter_per_stim, num_image_sets):\n",
-    "    all_blocks = []\n",
-    "    for img_set in range(num_image_sets):\n",
-    "        correct_key_mapping, stim_food_mapping = generate_key_food_mapping(num_directions, num_food)\n",
-    "        for b in range(2):\n",
-    "            nonshaping_block = pd.DataFrame(\n",
-    "                generate_non_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping)\n",
-    "            )\n",
-    "            nonshaping_block[\"block\"] = img_set * 2 + b\n",
-    "            nonshaping_block[\"img_folder\"] = img_set + 1\n",
-    "            all_blocks.append(nonshaping_block)\n",
-    "\n",
-    "    return pd.concat(all_blocks)\n",
-    "\n",
-    "NUM_DIRECTIONS = 4\n",
-    "NUM_FOOD = 4\n",
-    "NUM_ITER_PER_STIM = 13\n",
-    "\n",
-    "all_blocks = generate_nonshaping_experiment(NUM_DIRECTIONS, NUM_FOOD, NUM_ITER_PER_STIM, 2)\n",
-    "all_blocks[\"block\"] = all_blocks[\"block\"] + 1\n",
-    "all_blocks = all_blocks[OUTPUT_COL_ORDER]\n",
-    "\n",
-    "all_blocks.to_csv(f\"{seq_folder}/nonshaping2_learning.csv\", index=False)\n",
-    "\n",
-    "all_blocks.head(4)"
+    "concated_data.tail(4)"
    ]
   }
  ],
