--- a/tools/shaping_seqs.ipynb
+++ b/tools/shaping_seqs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "id": "37907a81",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "id": "83e9ea29",
    "metadata": {},
    "outputs": [],
@@ -260,6 +260,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6dd05502",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]\n",
+      "[[0, 1], [0, 2], [0, 3], [1, 2], [1, 3], [2, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "# Generate all combinations of 2 items from [0, 1, 2, 3]\n",
+    "NUM_IMG_FOLDERS = 4\n",
+    "items = np.arange(NUM_IMG_FOLDERS)\n",
+    "combos = list(combinations(items, 2))\n",
+    "print(combos)\n",
+    "# Output: [(0, 1), (0, 2), (0, 3), (1, 2), (1, 3), (2, 3)]\n",
+    "\n",
+    "# Convert to lists if needed\n",
+    "combos_as_lists = [list(combo) for combo in combos]\n",
+    "print(combos_as_lists)\n",
+    "# Output: [[0, 1], [0, 2], [0, 3], [1, 2], [1, 3], [2, 3]]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "20aa082b",
    "metadata": {},
@@ -269,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 8,
    "id": "cf54ad9f",
    "metadata": {},
    "outputs": [
@@ -312,62 +343,62 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -375,25 +406,25 @@
       ],
       "text/plain": [
        "   stim  correct_key  block  img_folder  top_img  bottom_img  left_img  \\\n",
-       "0     0            2      1           1        0           3         2   \n",
-       "1     1            3      1           1        3           1         0   \n",
-       "2     0            0      1           1        1           0         3   \n",
-       "3     1            1      1           1        3           0         2   \n",
+       "0     0            0      1           3        3           0         2   \n",
+       "1     2            2      1           3        1           0         3   \n",
+       "2     0            0      1           3        3           1         2   \n",
+       "3     3            1      1           3        2           0         3   \n",
        "\n",
        "   right_img  top_key  bottom_key  left_key  right_key  \n",
-       "0          1        0           1         3          2  \n",
-       "1          2        0           1         3          2  \n",
-       "2          2        0           1         3          2  \n",
-       "3          1        0           1         3          2  "
+       "0          1        0           2         3          1  \n",
+       "1          2        0           2         3          1  \n",
+       "2          0        0           2         3          1  \n",
+       "3          1        0           2         3          1  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def generate_shaping_round(num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping, img_set):\n",
+    "def generate_shaping_round(num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping, img_set, bs):\n",
     "    shaping_block = pd.DataFrame(\n",
     "        generate_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping)\n",
     "    )\n",
@@ -402,19 +433,19 @@
     "            num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping\n",
     "        )\n",
     "    )\n",
-    "    shaping_block[\"block\"] = img_set * 2\n",
+    "    shaping_block[\"block\"] = bs * 2\n",
     "    shaping_block[\"img_folder\"] = img_set + 1\n",
-    "    nonshaping_block[\"block\"] = img_set * 2 + 1\n",
+    "    nonshaping_block[\"block\"] = bs * 2 + 1\n",
     "    nonshaping_block[\"img_folder\"] = img_set + 1\n",
     "    return pd.concat([shaping_block, nonshaping_block])\n",
     "\n",
-    "def generate_nonshaping_round(num_directions, num_iter_per_stim,  correct_key_mapping, stim_food_mapping, img_set):\n",
+    "def generate_nonshaping_round(num_directions, num_iter_per_stim,  correct_key_mapping, stim_food_mapping, img_set, bs):\n",
     "    all_blocks = []\n",
     "    for b in range(2):\n",
     "        nonshaping_block = pd.DataFrame(\n",
     "            generate_non_shaping_block(num_directions, num_iter_per_stim, correct_key_mapping, stim_food_mapping)\n",
     "        )\n",
-    "        nonshaping_block[\"block\"] = img_set * 2 + b\n",
+    "        nonshaping_block[\"block\"] = bs * 2 + b\n",
     "        nonshaping_block[\"img_folder\"] = img_set + 1\n",
     "        all_blocks.append(nonshaping_block)\n",
     "\n",
@@ -423,19 +454,21 @@
     "NUM_DIRECTIONS = 4\n",
     "NUM_FOOD = 4\n",
     "NUM_ITER_PER_STIM = 13\n",
-    "shaping_blocks = []\n",
-    "nonshaping_blocks = []\n",
-    "for img_set in range(2):\n",
-    "    correct_key_mapping, stim_food_mapping = generate_key_food_mapping(NUM_DIRECTIONS, NUM_FOOD)\n",
-    "    shaping_blocks.append(generate_shaping_round(NUM_DIRECTIONS, NUM_ITER_PER_STIM, correct_key_mapping, stim_food_mapping, img_set))\n",
-    "    nonshaping_blocks.append(generate_nonshaping_round(NUM_DIRECTIONS, NUM_ITER_PER_STIM, correct_key_mapping, stim_food_mapping, img_set))\n",
+    "# potential image sets [0, 1], [2, 3], [0,2], [1,3], [0,3], [1,2]\n",
+    "for seq_idx, set_comb in enumerate(combos_as_lists):\n",
+    "    shaping_blocks = []\n",
+    "    nonshaping_blocks = []    \n",
+    "    for bs, img_set in enumerate(set_comb):\n",
+    "        correct_key_mapping, stim_food_mapping = generate_key_food_mapping(NUM_DIRECTIONS, NUM_FOOD)\n",
+    "        shaping_blocks.append(generate_shaping_round(NUM_DIRECTIONS, NUM_ITER_PER_STIM, correct_key_mapping, stim_food_mapping, img_set, bs))\n",
+    "        nonshaping_blocks.append(generate_nonshaping_round(NUM_DIRECTIONS, NUM_ITER_PER_STIM, correct_key_mapping, stim_food_mapping, img_set, bs))\n",
     "\n",
     "\n",
-    "for name, data in zip([\"shaping\", \"nonshaping\"], [shaping_blocks, nonshaping_blocks]):\n",
-    "    concated_data = pd.concat(data)\n",
-    "    concated_data[\"block\"] = concated_data[\"block\"] + 1\n",
-    "    concated_data = concated_data[OUTPUT_COL_ORDER]\n",
-    "    concated_data.to_csv(f\"{seq_folder}/{name}2_learning.csv\", index=False)\n",
+    "    for name, data in zip([\"shaping\", \"nonshaping\"], [shaping_blocks, nonshaping_blocks]):\n",
+    "        concated_data = pd.concat(data)\n",
+    "        concated_data[\"block\"] = concated_data[\"block\"] + 1\n",
+    "        concated_data = concated_data[OUTPUT_COL_ORDER]\n",
+    "        concated_data.to_csv(f\"{seq_folder}/{name}{seq_idx}_learning.csv\", index=False)\n",
     "\n",
     "concated_data.head(4)"
    ]
